--- a/ocr_eval/requirements.txt
+++ b/ocr_eval/requirements.txt
@@ -1,7 +1,7 @@
 clams-python>=1.0.9
 ffmpeg-python>=0.2.0
 mmif-docloc-baapb>=230817
-mmif-python>=1.0.8
+mmif-python==1.*
 numpy>=1.25.2
 opencv-python>=4.8.0.76
 pandas>=2.0.3
